--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
+    "onscan.js": "^1.5.2",
     "supervisor": "^0.12.0",
     "validator": "^13.7.0"
   }
