--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.36.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
@@ -23,6 +24,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "onscan.js": "^1.5.2",
     "supervisor": "^0.12.0",
     "validator": "^13.7.0"
