--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.3.1",
@@ -27,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "onscan.js": "^1.5.2",
     "supervisor": "^0.12.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xlsx": "^0.18.5"
   }
 }
