--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "ngrok": "^5.0.0-beta.2",
     "onscan.js": "^1.5.2",
     "supervisor": "^0.12.0",
     "validator": "^13.7.0",
